Added ListPage UI and Review class
This page is used for listing News, Review, Films, and Interviews.

--- a/AccessReel/AccessReel/AccessReel.csproj
+++ b/AccessReel/AccessReel/AccessReel.csproj
@@ -64,6 +64,9 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <MauiXaml Update="ListPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	  <MauiXaml Update="NewContent1.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
