Added user/clock/app icons

--- a/AccessReel/AccessReel/AccessReel.csproj
+++ b/AccessReel/AccessReel/AccessReel.csproj
@@ -43,7 +43,7 @@
 
 	<ItemGroup>
 		<!-- App Icon -->
-		<MauiIcon Include="Resources\AppIcon\arlogo.svg" color="#ffffff"/>
+		<MauiIcon Include="Resources\AppIcon\arlogo.svg" color="#ffffff" />
 
 		<!-- Splash Screen -->
 		<MauiSplashScreen Include="Resources\Splash\splash.svg" Color="#512BD4" BaseSize="128,128" />
@@ -61,7 +61,9 @@
 
 	<ItemGroup>
 	  <None Remove="Resources\Fonts\fa-regular-400.ttf" />
+	  <None Remove="Resources\Images\clock.png" />
 	  <None Remove="Resources\Images\logo.jpg" />
+	  <None Remove="Resources\Images\user.png" />
 	</ItemGroup>
 
 	<ItemGroup>
