--- a/AccessReel/AccessReel/AccessReel.csproj
+++ b/AccessReel/AccessReel/AccessReel.csproj
@@ -82,6 +82,7 @@
 		<PackageReference Include="Microsoft.Maui.Controls.Compatibility" Version="8.0.91" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="8.0.0" />
 		<PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+		<PackageReference Include="Plugin.LocalNotification" Version="11.1.4" />
 	</ItemGroup>
 
 	<ItemGroup>
@@ -121,6 +122,24 @@
 	  <None Update="ArticlePage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </None>
+	</ItemGroup>
+
+	<ItemGroup Condition="'$(TargetFramework)' == 'net8.0-android'">
+	  <PackageReference Include="Xamarin.AndroidX.Activity">
+	    <Version>1.9.3.1</Version>
+	  </PackageReference>
+	  <PackageReference Include="Xamarin.AndroidX.Activity.Ktx">
+	    <Version>1.9.3.1</Version>
+	  </PackageReference>
+	  <PackageReference Include="Xamarin.AndroidX.Collection">
+	    <Version>1.4.5.1</Version>
+	  </PackageReference>
+	  <PackageReference Include="Xamarin.AndroidX.Collection.Ktx">
+	    <Version>1.4.5.1</Version>
+	  </PackageReference>
+	  <PackageReference Include="Xamarin.AndroidX.Fragment.Ktx">
+	    <Version>1.8.5.1</Version>
+	  </PackageReference>
 	</ItemGroup>
 
 </Project>
