--- a/AccessReel/AccessReel/AccessReel.csproj
+++ b/AccessReel/AccessReel/AccessReel.csproj
@@ -66,6 +66,7 @@
 	<ItemGroup>
 	  <None Remove="Resources\Fonts\fa-regular-400.ttf" />
 	  <None Remove="Resources\Images\clock.png" />
+	  <None Remove="Resources\Images\competition.jpg" />
 	  <None Remove="Resources\Images\films.jpg" />
 	  <None Remove="Resources\Images\interviews.jpg" />
 	  <None Remove="Resources\Images\logo.jpg" />
